objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Kommentar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Record_Type_Id__c</fullName>
        <formula>IF( RecordTypeId = '0120Y000000W0t2','0121r000000d4FE' , '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Id__c</fullName>
        <externalId>true</externalId>
        <label>Google Drive Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_2__c</fullName>
        <label>Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Long_Name__c</fullName>
        <description>If the filename is longer than 80 characters this field can show more information that the name field.</description>
        <label>Long Name</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Neue_Unterlagen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neue Unterlagen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Dokument_ID__c</fullName>
        <label>Old Dokument ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Dokumente</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Quelle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Sources</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Typ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAccessibleForLegal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Wird in Zusammenhang mit "Mandat an Anwalt versenden" für Filterfunktion benutzt</description>
        <label>IsAccessibleForLegal</label>
        <type>Checkbox</type>
    </fields>
    <label>Dokument</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dokumente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Dieselskandal</fullName>
        <active>true</active>
        <label>Dieselskandal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finanzierung</fullName>
        <active>true</active>
        <label>Finanzierung</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lebensversicherung</fullName>
        <active>true</active>
        <label>Lebensversicherung</label>
    </recordTypes>
</CustomObject>